--- a/src/NativeBOINC/res/layout/install_step1.xml
+++ b/src/NativeBOINC/res/layout/install_step1.xml
@@ -35,14 +35,14 @@
 		  	<TextView
 				android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textSize="18dip"
 		  		android:textStyle="bold"
 		  		android:paddingBottom="10dip"
+		  		android:textAppearance="?android:attr/textAppearanceLarge"
 		  		android:text="@string/installWelcome" />
 		  	<TextView
 				android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
+		  		android:textSize="@dimen/labelTextSize"
 		  		android:text="@string/installClientInstall" />
 		  	<RelativeLayout
 		  		android:layout_width="fill_parent"
@@ -52,7 +52,7 @@
 			  	<TextView android:id="@+id/versionToInstall"
 			  		android:layout_width="wrap_content"
 			  		android:layout_height="wrap_content"
-			  		android:textSize="14dip"
+			  		android:textSize="@dimen/labelTextSize"
 			  		android:layout_centerVertical="true"
 			  		android:layout_alignParentTop="false"
 			  		android:layout_alignParentRight="false"
@@ -69,23 +69,18 @@
   		  	<TextView
 		  		android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
+		  		android:textSize="@dimen/labelTextSize"
 		  		android:textStyle="bold"
 		  		android:text="@string/installReadBefore" />
 		  	<TextView
 		  		android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
-		  		android:text="@string/installAttention1" />
-		  	<TextView
-		  		android:layout_width="fill_parent"
-		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
+		  		android:textSize="@dimen/labelTextSize"
 		  		android:text="@string/installAttention2" />
 		  	<TextView
 		  		android:layout_width="fill_parent"
 		  		android:layout_height="wrap_content"
-		  		android:textSize="14dip"
+		  		android:textSize="@dimen/labelTextSize"
 		  		android:text="@string/installAttention3" />
 	  	</LinearLayout>
 	</ScrollView>
