--- a/src/NativeBOINC/res/layout/project_list.xml
+++ b/src/NativeBOINC/res/layout/project_list.xml
@@ -30,6 +30,7 @@
    	    android:layout_marginLeft="6dip"
        	android:layout_marginTop="6dip"
        	android:visibility="gone"
+       	android:textSize="@dimen/labelTextSize"
        	android:text="@string/projectListHelp" />
   <ListView
 		android:id="@android:id/list"
