--- a/src/NativeBOINC/res/layout-v11/dialog_edit.xml
+++ b/src/NativeBOINC/res/layout-v11/dialog_edit.xml
@@ -19,13 +19,14 @@
  * 
  */
  -->
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/logsList"
-    android:dividerHeight="0dip"
-    android:divider="@null"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:stackFromBottom="true"
-    android:transcriptMode="normal"
-    android:fastScrollEnabled="true">
-</ListView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical"
+	android:padding="10dip">
+	<EditText
+		android:orientation="horizontal"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:id="@android:id/edit" />
+</LinearLayout>
