--- a/src/NativeBOINC/res/menu/main_menu.xml
+++ b/src/NativeBOINC/res/menu/main_menu.xml
@@ -23,29 +23,36 @@
 	<item
 		android:id="@+id/menuStartUp"
 		android:icon="@android:drawable/ic_media_play"
-		android:title="@string/menuStartUp"/>
+		android:title="@string/menuStartUp"
+		android:showAsAction="always|withText"/>
 	<item
 		android:id="@+id/menuShutdown"
 		android:icon="@android:drawable/ic_media_pause"
+		android:showAsAction="always|withText"
 		android:title="@string/menuShutdown"/>
 	<item
 		android:id="@+id/menuManage"
 		android:icon="@android:drawable/ic_menu_manage"
+		android:showAsAction="always|withText"
 		android:title="@string/menuManage"/>
 	<item
 		android:id="@+id/menuPreferences"
 		android:icon="@android:drawable/ic_menu_preferences"
+		android:showAsAction="ifRoom|withText"
 		android:title="@string/menuPreferences"/>
 	<item
 		android:id="@+id/menuNativeClient"
 		android:icon="@drawable/ic_menu_boinc"
+		android:showAsAction="ifRoom|withText"
 		android:title="@string/menuNativeClient"/>
 	<item
 		android:id="@+id/menuConnect"
 		android:icon="@drawable/ic_menu_goto"
+		android:showAsAction="ifRoom|withText"
 		android:title="@string/menuConnect"/>
 	<item
 		android:id="@+id/menuDisconnect"
 		android:icon="@android:drawable/ic_menu_close_clear_cancel"
+		android:showAsAction="ifRoom|withText"
 		android:title="@string/menuDisconnect"/>
 </menu>
