--- a/src/NativeBOINC/res/values/styles.xml
+++ b/src/NativeBOINC/res/values/styles.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="StandaloneDialog" parent="@android:style/Theme.Dialog"></style>
+    <style name="ScreenLockScreen" parent="@android:style/Theme.NoTitleBar.Fullscreen"></style>
 </resources>
