Added Polish translation for NativeBOINC.

--- a/src/NativeBOINC/res/layout/install_finish.xml
+++ b/src/NativeBOINC/res/layout/install_finish.xml
@@ -31,6 +31,12 @@
   		android:layout_height="wrap_content"
   		android:textSize="@dimen/labelTextSize"
   		android:text="@string/installFinished" />
+    <TextView
+		android:layout_width="fill_parent"
+  		android:layout_height="wrap_content"
+  		android:textSize="@dimen/labelTextSize"
+  		android:paddingTop="10dip"
+  		android:text="@string/installInfoFinished" />
   	<TextView
 		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
