NativeBOINC: improved ProjectListActivity.

--- a/src/NativeBOINC/res/layout/project_list.xml
+++ b/src/NativeBOINC/res/layout/project_list.xml
@@ -36,8 +36,8 @@
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:visibility="gone"
-		android:layout_weight="1" />
+		android:layout_weight="1"
+		android:visibility="gone" />
   <TextView
   		android:id="@android:id/empty"
   		android:layout_width="fill_parent"
