NativeBOINC: added German translations (thanks for Daniel Winzen).

--- a/src/NativeBOINC/res/layout-v11/local_prefs.xml
+++ b/src/NativeBOINC/res/layout-v11/local_prefs.xml
@@ -80,7 +80,8 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/labelTextSize"
-							android:text="@string/minutes" />
+							android:text="@string/minutes"
+							android:maxLines="1" />
 					</LinearLayout>
 					<LinearLayout
 						android:orientation="horizontal"
@@ -124,7 +125,8 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/labelTextSize"
-							android:text="@string/minutes" />
+							android:text="@string/minutes"
+							android:maxLines="1" />
 					</LinearLayout>
 					<LinearLayout
 			  			android:orientation="horizontal"
@@ -168,7 +170,8 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:textSize="@dimen/labelTextSize"
-							android:text="@string/degreeC" />
+							android:text="@string/degreeC"
+							android:maxLines="1" />
 					</LinearLayout>
 					<LinearLayout
 			  			android:orientation="horizontal"
