--- a/src/NativeBOINC/res/layout/add_project.xml
+++ b/src/NativeBOINC/res/layout/add_project.xml
@@ -41,61 +41,98 @@
 			android:layout_height="wrap_content" 
 			android:text="@string/addProjectUse"/>
 	</RadioGroup>
-	<LinearLayout android:orientation="horizontal"
-		android:id="@+id/addProjectNameLayout"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/addProjectName"
-			android:textSize="@dimen/labelTextSize"
-			android:paddingRight="5dip" />
-		<EditText
-			android:id="@+id/addProjectName" 
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:background="@android:drawable/editbox_background"
-			android:inputType="textUri" />
-	</LinearLayout>
-	<LinearLayout android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/addProjectEmail"
-			android:textSize="@dimen/labelTextSize"
-			android:paddingRight="5dip" />
-		<EditText
-			android:id="@+id/addProjectEmail" 
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:background="@android:drawable/editbox_background"
-			android:inputType="textEmailAddress" />
-	</LinearLayout>
-	<LinearLayout android:orientation="horizontal"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" 
-			android:text="@string/addProjectPassword"
-			android:textSize="@dimen/labelTextSize"
-			android:paddingRight="5dip" />
-		<EditText
-			android:id="@+id/addProjectPassword"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:background="@android:drawable/editbox_background"
-			android:inputType="textPassword" />
-	</LinearLayout>
-	<TextView
-		android:id="@+id/addProjectMinPasswordLength"
-		android:layout_width="fill_parent"
+	<LinearLayout android:id="@+id/createAccountContainer"
+	    android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:textSize="@dimen/labelTextSize"
-		android:text="@string/addProjectMinPassword" />
+		android:orientation="vertical">
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" 
+				android:text="@string/addProjectName"
+				android:textSize="@dimen/labelTextSize"
+				android:paddingRight="5dip" />
+			<EditText
+				android:id="@+id/create_name" 
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textUri" />
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" 
+				android:text="@string/addProjectEmail"
+				android:textSize="@dimen/labelTextSize"
+				android:paddingRight="5dip" />
+			<EditText
+				android:id="@+id/create_email" 
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textEmailAddress" />
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" 
+				android:text="@string/addProjectPassword"
+				android:textSize="@dimen/labelTextSize"
+				android:paddingRight="5dip" />
+			<EditText
+				android:id="@+id/create_password"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textPassword" />
+		</LinearLayout>
+		<TextView
+			android:id="@+id/create_minPasswordLength"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:textSize="@dimen/labelTextSize"
+			android:text="@string/addProjectMinPassword" />
+	</LinearLayout>
+	<LinearLayout android:id="@+id/useAccountContainer"
+	    android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:visibility="gone"
+		android:orientation="vertical">
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" 
+				android:text="@string/addProjectEmail"
+				android:textSize="@dimen/labelTextSize"
+				android:paddingRight="5dip" />
+			<EditText
+				android:id="@+id/use_email" 
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textEmailAddress" />
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" 
+				android:text="@string/addProjectPassword"
+				android:textSize="@dimen/labelTextSize"
+				android:paddingRight="5dip" />
+			<EditText
+				android:id="@+id/use_password"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:inputType="textPassword" />
+		</LinearLayout>
+	</LinearLayout>
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
