--- a/src/NativeBOINC/res/layout/local_prefs.xml
+++ b/src/NativeBOINC/res/layout/local_prefs.xml
@@ -75,8 +75,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -99,8 +98,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -122,8 +120,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -146,8 +143,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -169,8 +165,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -193,8 +188,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -216,8 +210,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -254,8 +247,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -277,8 +269,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -300,8 +291,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -312,8 +302,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="number"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -335,8 +324,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="number"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -358,8 +346,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="number"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -401,8 +388,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -424,8 +410,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -447,8 +432,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -470,8 +454,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -493,8 +476,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
@@ -516,8 +498,7 @@
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:inputType="numberDecimal"
-							android:maxWidth="@dimen/localPrefEditSize"
-							android:background="@android:drawable/editbox_background" />
+							android:maxWidth="@dimen/localPrefEditSize" />
 						<TextView
 							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
